--- a/Wiki/NES/Dragon_Warrior/Graphics_Data.wikitext
+++ b/Wiki/NES/Dragon_Warrior/Graphics_Data.wikitext
@@ -8,36 +8,36 @@ This page documents the graphics system, tile organization, and palette structur
 
 Dragon Warrior uses 16KB of CHR ROM (2 banks of 8KB each) for all graphics data.
 
-===CHR Bank 0 ($0000-$0FFF)===
+===CHR Bank 0 ($0000-$0fff)===
 
 {| class="wikitable"
 !  Tile Range  !!  Address  !!  Category  !!  Description  !!  Palette
 |-
-|  $00-$0F  ||  $0000-$007F  ||  Hero  ||  Player character sprites and animations  ||  Character Palette
+|  $00-$0f  ||  $0000-$007f  ||  Hero  ||  Player character sprites and animations  ||  Character Palette
 |-
-|  $10-$4F  ||  $0100-$04FF  ||  Monsters  ||  Enemy sprites (64 different monsters)  ||  Monster Palette
+|  $10-$4f  ||  $0100-$04ff  ||  Monsters  ||  Enemy sprites (64 different monsters)  ||  Monster Palette
 |-
-|  $50-$6F  ||  $0500-$06FF  ||  NPCs  ||  Townspeople, guards, king, princess  ||  Character Palette
+|  $50-$6f  ||  $0500-$06ff  ||  NPCs  ||  Townspeople, guards, king, princess  ||  Character Palette
 |-
-|  $70-$7F  ||  $0700-$07FF  ||  Items  ||  Weapons, armor, items, treasure chests  ||  Menu Palette
+|  $70-$7f  ||  $0700-$07ff  ||  Items  ||  Weapons, armor, items, treasure chests  ||  Menu Palette
 |-
-|  $80-$8F  ||  $0800-$08FF  ||  UI Elements  ||  Menu cursors, borders, text boxes  ||  Menu Palette
+|  $80-$8f  ||  $0800-$08ff  ||  UI Elements  ||  Menu cursors, borders, text boxes  ||  Menu Palette
 |-
-|  $90-$FF  ||  $0900-$0FFF  ||  Font/Text  ||  Text characters and symbols  ||  Dialog Palette
+|  $90-$ff  ||  $0900-$0fff  ||  Font/Text  ||  Text characters and symbols  ||  Dialog Palette
 |}
 
-===CHR Bank 1 ($1000-$1FFF)===
+===CHR Bank 1 ($1000-$1fff)===
 
 {| class="wikitable"
 !  Tile Range  !!  Address  !!  Category  !!  Description  !!  Palette
 |-
-|  $00-$3F  ||  $1000-$13FF  ||  Overworld  ||  Grass, trees, mountains, water  ||  Overworld Palette
+|  $00-$3f  ||  $1000-$13ff  ||  Overworld  ||  Grass, trees, mountains, water  ||  Overworld Palette
 |-
-|  $40-$7F  ||  $1400-$17FF  ||  Towns  ||  Buildings, roads, doors, roofs  ||  Town Palette
+|  $40-$7f  ||  $1400-$17ff  ||  Towns  ||  Buildings, roads, doors, roofs  ||  Town Palette
 |-
-|  $80-$BF  ||  $1800-$1BFF  ||  Dungeons  ||  Stone walls, floors, stairs  ||  Dungeon Palette
+|  $80-$bf  ||  $1800-$1bff  ||  Dungeons  ||  Stone walls, floors, stairs  ||  Dungeon Palette
 |-
-|  $C0-$FF  ||  $1C00-$1FFF  ||  Special  ||  Castle interiors, special areas  ||  Battle Palette
+|  $c0-$ff  ||  $1c00-$1fff  ||  Special  ||  Castle interiors, special areas  ||  Battle Palette
 |}
 
 ==Palette System==
@@ -49,21 +49,21 @@ Dragon Warrior uses 8 different 4-color palettes for various game elements:
 {| class="wikitable"
 !  ID  !!  Name  !!  Purpose  !!  Color 0  !!  Color 1  !!  Color 2  !!  Color 3
 |-
-|  0  ||  Overworld  ||  World map graphics  ||  Black ($0F)  ||  White ($30)  ||  Light Gray ($10)  ||  Dark Gray ($00)
+|  0  ||  Overworld  ||  World map graphics  ||  Black ($0f)  ||  White ($30)  ||  Light Gray ($10)  ||  Dark Gray ($00)
 |-
-|  1  ||  Dungeon  ||  Cave/dungeon graphics  ||  Black ($0F)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
+|  1  ||  Dungeon  ||  Cave/dungeon graphics  ||  Black ($0f)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
 |-
-|  2  ||  Town  ||  Town building graphics  ||  Black ($0F)  ||  Brown ($16)  ||  Orange ($27)  ||  White ($30)
+|  2  ||  Town  ||  Town building graphics  ||  Black ($0f)  ||  Brown ($16)  ||  Orange ($27)  ||  White ($30)
 |-
-|  3  ||  Battle  ||  Battle background  ||  Black ($0F)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
+|  3  ||  Battle  ||  Battle background  ||  Black ($0f)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
 |-
-|  4  ||  Menu  ||  UI and menu graphics  ||  Black ($0F)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
+|  4  ||  Menu  ||  UI and menu graphics  ||  Black ($0f)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
 |-
-|  5  ||  Character  ||  Hero and NPC sprites  ||  Black ($0F)  ||  Brown ($16)  ||  Orange ($27)  ||  White ($30)
+|  5  ||  Character  ||  Hero and NPC sprites  ||  Black ($0f)  ||  Brown ($16)  ||  Orange ($27)  ||  White ($30)
 |-
-|  6  ||  Monster  ||  Enemy sprites  ||  Black ($0F)  ||  Purple ($05)  ||  Pink ($15)  ||  White ($30)
+|  6  ||  Monster  ||  Enemy sprites  ||  Black ($0f)  ||  Purple ($05)  ||  Pink ($15)  ||  White ($30)
 |-
-|  7  ||  Dialog  ||  Text and dialog boxes  ||  Black ($0F)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
+|  7  ||  Dialog  ||  Text and dialog boxes  ||  Black ($0f)  ||  Dark Gray ($00)  ||  Light Gray ($10)  ||  White ($30)
 |}
 
 ===NES Color Values===
@@ -73,7 +73,7 @@ The NES uses a 64-color palette. Common Dragon Warrior colors:
 {| class="wikitable"
 !  Value  !!  Color  !!  RGB  !!  Usage
 |-
-|  $0F  ||  Black  ||  (84, 84, 84)  ||  Transparency, outlines
+|  $0f  ||  Black  ||  (84, 84, 84)  ||  Transparency, outlines
 |-
 |  $00  ||  Dark Gray  ||  (84, 84, 84)  ||  Shadows, dark areas
 |-
@@ -107,9 +107,9 @@ Sprite mapping:
 |-
 |  $04-$07  ||  Hero facing up (unarmed, frames 1-2, armed frames 1-2)
 |-
-|  $08-$0B  ||  Hero facing left (unarmed, frames 1-2, armed frames 1-2)
+|  $08-$0b  ||  Hero facing left (unarmed, frames 1-2, armed frames 1-2)
 |-
-|  $0C-$0F  ||  Hero facing right (unarmed, frames 1-2, armed frames 1-2)
+|  $0c-$0f  ||  Hero facing right (unarmed, frames 1-2, armed frames 1-2)
 |}
 
 ===Monster Animations===
@@ -143,21 +143,21 @@ Each background tile has properties defined in code:
 {| class="wikitable"
 !  Tile Type  !!  Tiles  !!  Properties
 |-
-|  Grass  ||  $00-$0F  ||  Walkable, standard encounter rate
+|  Grass  ||  $00-$0f  ||  Walkable, standard encounter rate
 |-
-|  Water  ||  $10-$1F  ||  Non-walkable (without ship/bridge)
+|  Water  ||  $10-$1f  ||  Non-walkable (without ship/bridge)
 |-
-|  Forest  ||  $20-$2F  ||  Walkable, high encounter rate
+|  Forest  ||  $20-$2f  ||  Walkable, high encounter rate
 |-
-|  Hills  ||  $30-$3F  ||  Walkable, standard encounters
+|  Hills  ||  $30-$3f  ||  Walkable, standard encounters
 |-
-|  Mountains  ||  $40-$4F  ||  Non-walkable
+|  Mountains  ||  $40-$4f  ||  Non-walkable
 |-
-|  Swamp  ||  $50-$5F  ||  Walkable, damage over time
+|  Swamp  ||  $50-$5f  ||  Walkable, damage over time
 |-
-|  Desert  ||  $60-$6F  ||  Walkable, moderate encounters
+|  Desert  ||  $60-$6f  ||  Walkable, moderate encounters
 |-
-|  Shore  ||  $70-$7F  ||  Walkable, low encounters
+|  Shore  ||  $70-$7f  ||  Walkable, low encounters
 |}
 
 ===Town Tileset===
@@ -165,15 +165,15 @@ Each background tile has properties defined in code:
 {| class="wikitable"
 !  Tile Type  !!  Tiles  !!  Properties
 |-
-|  Roads  ||  $00-$0F  ||  Walkable, no encounters
+|  Roads  ||  $00-$0f  ||  Walkable, no encounters
 |-
-|  Buildings  ||  $10-$3F  ||  Non-walkable (walls)
+|  Buildings  ||  $10-$3f  ||  Non-walkable (walls)
 |-
-|  Doors  ||  $40-$4F  ||  Walkable, triggers entry
+|  Doors  ||  $40-$4f  ||  Walkable, triggers entry
 |-
-|  Roofs  ||  $50-$6F  ||  Non-walkable
+|  Roofs  ||  $50-$6f  ||  Non-walkable
 |-
-|  Special  ||  $70-$7F  ||  Stairs, treasures, NPCs
+|  Special  ||  $70-$7f  ||  Stairs, treasures, NPCs
 |}
 
 ==Graphics Compression==
