--- a/Wiki/NES/Dragon_Warrior/SRAM_Map.wikitext
+++ b/Wiki/NES/Dragon_Warrior/SRAM_Map.wikitext
@@ -2,7 +2,7 @@
 
 =Dragon Warrior (NES) SRAM Map=
 
-Dragon Warrior uses 8KB of battery-backed SRAM located at $6000-$7FFF for save game data. The game supports a single save file with comprehensive player progress tracking.
+Dragon Warrior uses 8KB of battery-backed SRAM located at $6000-$7fff for save game data. The game supports a single save file with comprehensive player progress tracking.
 
 ==Save Game Structure==
 
@@ -11,7 +11,7 @@ The save game data begins at $6000 and uses the following structure:
 {| class="wikitable sortable"
 !  Offset  !!  Size  !!  Type  !!  Description
 |-
-|  $6000  ||  1 byte  ||  Flag  ||  Save file validity flag ($A5 = valid save)
+|  $6000  ||  1 byte  ||  Flag  ||  Save file validity flag ($a5 = valid save)
 |-
 |  $6001  ||  1 byte  ||  Level  ||  Player level (1-30)
 |-
@@ -25,15 +25,15 @@ The save game data begins at $6000 and uses the following structure:
 |-
 |  $6008  ||  2 bytes  ||  EXP  ||  Current experience points (little endian)
 |-
-|  $600A  ||  2 bytes  ||  GOLD  ||  Current gold amount (little endian)
+|  $600a  ||  2 bytes  ||  GOLD  ||  Current gold amount (little endian)
 |-
-|  $600C  ||  1 byte  ||  WEAPON  ||  Equipped weapon ID
+|  $600c  ||  1 byte  ||  WEAPON  ||  Equipped weapon ID
 |-
-|  $600D  ||  1 byte  ||  ARMOR  ||  Equipped armor ID
+|  $600d  ||  1 byte  ||  ARMOR  ||  Equipped armor ID
 |-
-|  $600E  ||  1 byte  ||  SHIELD  ||  Equipped shield ID
+|  $600e  ||  1 byte  ||  SHIELD  ||  Equipped shield ID
 |-
-|  $600F  ||  1 byte  ||  MAP  ||  Current map ID
+|  $600f  ||  1 byte  ||  MAP  ||  Current map ID
 |-
 |  $6010  ||  1 byte  ||  X_POS  ||  Player X position on map
 |-
@@ -43,83 +43,83 @@ The save game data begins at $6000 and uses the following structure:
 |-
 |  $6013  ||  8 bytes  ||  NAME  ||  Player name (8 characters, space-padded)
 |-
-|  $601B  ||  32 bytes  ||  ITEMS  ||  Inventory items (item ID per byte, $FF = empty slot)
+|  $601b  ||  32 bytes  ||  ITEMS  ||  Inventory items (item ID per byte, $ff = empty slot)
 |-
-|  $603B  ||  16 bytes  ||  FLAGS  ||  Game progress flags (quest items, story progress)
+|  $603b  ||  16 bytes  ||  FLAGS  ||  Game progress flags (quest items, story progress)
 |-
-|  $604B  ||  16 bytes  ||  SPELLS  ||  Known spells bitmask
+|  $604b  ||  16 bytes  ||  SPELLS  ||  Known spells bitmask
 |-
-|  $605B  ||  1 byte  ||  CHECKSUM  ||  Save data checksum
+|  $605b  ||  1 byte  ||  CHECKSUM  ||  Save data checksum
 |-
-|  $605C-$7FFF  ||  ...  ||  UNUSED  ||  Unused SRAM space
+|  $605c-$7fff  ||  ...  ||  UNUSED  ||  Unused SRAM space
 |}
 
 ==Flag Meanings==
 
-===Game Progress Flags ($603B-$604A)===
+===Game Progress Flags ($603b-$604a)===
 
 {| class="wikitable"
 !  Offset  !!  Bit  !!  Description
 |-
-|  $603B  ||  0  ||  Has Gwaelin's Love
+|  $603b  ||  0  ||  Has Gwaelin's Love
 |-
-|  $603B  ||  1  ||  Has Silver Harp
+|  $603b  ||  1  ||  Has Silver Harp
 |-
-|  $603B  ||  2  ||  Has Staff of Rain
+|  $603b  ||  2  ||  Has Staff of Rain
 |-
-|  $603B  ||  3  ||  Has Stones of Sunlight
+|  $603b  ||  3  ||  Has Stones of Sunlight
 |-
-|  $603B  ||  4  ||  Has Rainbow Drop
+|  $603b  ||  4  ||  Has Rainbow Drop
 |-
-|  $603B  ||  5  ||  Has Erdrick's Token
+|  $603b  ||  5  ||  Has Erdrick's Token
 |-
-|  $603B  ||  6  ||  Rescued Princess Laura (Gwaelin)
+|  $603b  ||  6  ||  Rescued Princess Laura (Gwaelin)
 |-
-|  $603B  ||  7  ||  Visited Tantegel Castle
+|  $603b  ||  7  ||  Visited Tantegel Castle
 |-
-|  $603C  ||  0  ||  Tantagel moat drained
+|  $603c  ||  0  ||  Tantagel moat drained
 |-
-|  $603C  ||  1  ||  Charlock Castle bridge created
+|  $603c  ||  1  ||  Charlock Castle bridge created
 |-
-|  $603C  ||  2  ||  Defeated Golem
+|  $603c  ||  2  ||  Defeated Golem
 |-
-|  $603C  ||  3  ||  Defeated Green Dragon
+|  $603c  ||  3  ||  Defeated Green Dragon
 |-
-|  $603C  ||  4  ||  Defeated Blue Dragon
+|  $603c  ||  4  ||  Defeated Blue Dragon
 |-
-|  $603C  ||  5  ||  Defeated Red Dragon
+|  $603c  ||  5  ||  Defeated Red Dragon
 |-
-|  $603C  ||  6  ||  Defeated Dragonlord
+|  $603c  ||  6  ||  Defeated Dragonlord
 |-
-|  $603C  ||  7  ||  Game completed
+|  $603c  ||  7  ||  Game completed
 |-
-|  $603D-$604A  ||  ...  ||  Additional quest and location flags
+|  $603d-$604a  ||  ...  ||  Additional quest and location flags
 |}
 
-===Spell Flags ($604B-$605A)===
+===Spell Flags ($604b-$605a)===
 
 {| class="wikitable"
 !  Offset  !!  Bit  !!  Spell
 |-
-|  $604B  ||  0  ||  HEAL
+|  $604b  ||  0  ||  HEAL
 |-
-|  $604B  ||  1  ||  HURT
+|  $604b  ||  1  ||  HURT
 |-
-|  $604B  ||  2  ||  SLEEP
+|  $604b  ||  2  ||  SLEEP
 |-
-|  $604B  ||  3  ||  RADIANT
+|  $604b  ||  3  ||  RADIANT
 |-
-|  $604B  ||  4  ||  STOPSPELL
+|  $604b  ||  4  ||  STOPSPELL
 |-
-|  $604B  ||  5  ||  OUTSIDE
+|  $604b  ||  5  ||  OUTSIDE
 |-
-|  $604B  ||  6  ||  RETURN
+|  $604b  ||  6  ||  RETURN
 |-
-|  $604B  ||  7  ||  REPEL
+|  $604b  ||  7  ||  REPEL
 |-
-|  $604C  ||  0  ||  HEALMORE
+|  $604c  ||  0  ||  HEALMORE
 |-
-|  $604C  ||  1  ||  HURTMORE
+|  $604c  ||  1  ||  HURTMORE
 |}
 
 ==Equipment IDs==
@@ -204,19 +204,19 @@ The save game data begins at $6000 and uses the following structure:
 |-
 |  $09  ||  Erdrick's Cave  ||  Cave
 |-
-|  $0A  ||  Mountain Cave  ||  Cave
+|  $0a  ||  Mountain Cave  ||  Cave
 |-
-|  $0B  ||  Garin's Grave  ||  Dungeon
+|  $0b  ||  Garin's Grave  ||  Dungeon
 |-
-|  $0C  ||  Southern Shrine  ||  Shrine
+|  $0c  ||  Southern Shrine  ||  Shrine
 |-
-|  $0D-$FF  ||  Additional areas  ||  Various
+|  $0d-$ff  ||  Additional areas  ||  Various
 |}
 
 ==Save File Validation==
 
 The game validates save files using multiple checks:
-# Validity flag must be $A5
+# Validity flag must be $a5
 # Checksum verification of critical data
 # Range checks on stats and position data
 # Equipment ID validation
@@ -225,7 +225,7 @@ If validation fails, the game initializes a new save file with default values.
 
 ==Technical Notes==
 
-* SRAM is mapped to $6000-$7FFF in CPU address space
+* SRAM is mapped to $6000-$7fff in CPU address space
 * Battery backup maintains data when power is off
 * Only one save slot is supported
 * Save occurs automatically when talking to certain NPCs or using RETURN spell
