--- a/Wiki/SNES/Dragon_Quest_I_II/index.wikitext
+++ b/Wiki/SNES/Dragon_Quest_I_II/index.wikitext
@@ -47,13 +47,13 @@ This compilation brings the first two Dragon Quest games to the SNES with:
 |-
 ! Bank Range !! Address !! Description
 |-
-| $00-$17 || $8000-$FFFF || Program ROM
+| $00-$17 || $8000-$ffff || Program ROM
 |-
-| $70 || $0000-$1FFF || SRAM (save data)
+| $70 || $0000-$1fff || SRAM (save data)
 |-
-| $7E || $0000-$FFFF || WRAM (low)
+| $7e || $0000-$ffff || WRAM (low)
 |-
-| $7F || $0000-$FFFF || WRAM (high)
+| $7f || $0000-$ffff || WRAM (high)
 |}
 
 ==Dragon Quest I==
