--- a/Wiki/SNES/Robotrek/TBL.wikitext
+++ b/Wiki/SNES/Robotrek/TBL.wikitext
@@ -6,7 +6,7 @@ This page documents the text encoding used in Robotrek.
 
 == Character Encoding Table (TBL) ==
 
-=== Standard Characters ($00-$5F) ===
+=== Standard Characters ($00-$5f) ===
 
 {| class="wikitable"
 ! Hex !! Char !! Hex !! Char !! Hex !! Char !! Hex !! Char
@@ -31,34 +31,34 @@ This page documents the text encoding used in Robotrek.
 |-
 | $09 || I || $19 || Y || $29 || o || $39 || 4
 |-
-| $0A || J || $1A || Z || $2A || p || $3A || 5
+| $0a || J || $1a || Z || $2a || p || $3a || 5
 |-
-| $0B || K || $1B || a || $2B || q || $3B || 6
+| $0b || K || $1b || a || $2b || q || $3b || 6
 |-
-| $0C || L || $1C || b || $2C || r || $3C || 7
+| $0c || L || $1c || b || $2c || r || $3c || 7
 |-
-| $0D || M || $1D || c || $2D || s || $3D || 8
+| $0d || M || $1d || c || $2d || s || $3d || 8
 |-
-| $0E || N || $1E || d || $2E || t || $3E || 9
+| $0e || N || $1e || d || $2e || t || $3e || 9
 |-
-| $0F || O || $1F || e || $2F || u || $3F || (space)
+| $0f || O || $1f || e || $2f || u || $3f || (space)
 |}
 
-=== Punctuation ($40-$5F) ===
+=== Punctuation ($40-$5f) ===
 
 {| class="wikitable"
 ! Hex !! Char !! Hex !! Char !! Hex !! Char !! Hex !! Char
 |-
-| $40 || . || $44 || ? || $48 || ( || $4C || /
+| $40 || . || $44 || ? || $48 || ( || $4c || /
 |-
-| $41 || , || $45 || ' || $49 || ) || $4D || :
+| $41 || , || $45 || ' || $49 || ) || $4d || :
 |-
-| $42 || - || $46 || " || $4A || [ || $4E || ;
+| $42 || - || $46 || " || $4a || [ || $4e || ;
 |-
-| $43 || ! || $47 || ... || $4B || ] || $4F || +
+| $43 || ! || $47 || ... || $4b || ] || $4f || +
 |}
 
-=== Special Characters ($50-$5F) ===
+=== Special Characters ($50-$5f) ===
 
 {| class="wikitable"
 ! Hex !! Description
@@ -83,49 +83,49 @@ This page documents the text encoding used in Robotrek.
 |-
 | $59 || HP icon
 |-
-| $5A || EN icon
+| $5a || EN icon
 |-
-| $5B-$5F || (Reserved)
+| $5b-$5f || (Reserved)
 |}
 
 == Control Codes ==
 
-=== Text Flow ($F0-$FF) ===
+=== Text Flow ($f0-$ff) ===
 
 {| class="wikitable"
 ! Code !! Description !! Parameters
 |-
-| $F0 || Line break || --
+| $f0 || Line break || --
 |-
-| $F1 || Wait for input || --
+| $f1 || Wait for input || --
 |-
-| $F2 || Clear window || --
+| $f2 || Clear window || --
 |-
-| $F3 || Pause (frames) || 1 byte (duration)
+| $f3 || Pause (frames) || 1 byte (duration)
 |-
-| $F4 || Text speed || 1 byte (0=fast, 8=slow)
+| $f4 || Text speed || 1 byte (0=fast, 8=slow)
 |-
-| $F5 || Set position || 2 bytes (X, Y)
+| $f5 || Set position || 2 bytes (X, Y)
 |-
-| $F6 || Color || 1 byte (palette)
+| $f6 || Color || 1 byte (palette)
 |-
-| $F7 || Name variable || 1 byte (character ID)
+| $f7 || Name variable || 1 byte (character ID)
 |-
-| $F8 || Number variable || 2 bytes (RAM address)
+| $f8 || Number variable || 2 bytes (RAM address)
 |-
-| $F9 || Item name || 1 byte (item ID)
+| $f9 || Item name || 1 byte (item ID)
 |-
-| $FA || Play sound || 1 byte (sound ID)
+| $fa || Play sound || 1 byte (sound ID)
 |-
-| $FB || Face graphic || 1 byte (face ID)
+| $fb || Face graphic || 1 byte (face ID)
 |-
-| $FC || Choice prompt || 2 bytes (choice count, jump offset)
+| $fc || Choice prompt || 2 bytes (choice count, jump offset)
 |-
-| $FD || Jump || 2 bytes (text address)
+| $fd || Jump || 2 bytes (text address)
 |-
-| $FE || End dialog || --
+| $fe || End dialog || --
 |-
-| $FF || End script || --
+| $ff || End script || --
 |}
 
 == Name Variables ==
@@ -150,7 +150,7 @@ This page documents the text encoding used in Robotrek.
 
 Robotrek uses dictionary compression for common words:
 
-=== Common Words ($80-$BF) ===
+=== Common Words ($80-$bf) ===
 
 {| class="wikitable"
 ! Code !! Word !! Code !! Word
@@ -175,20 +175,20 @@ Robotrek uses dictionary compression for common words:
 |-
 | $89 || "from " || $99 || "weapon"
 |-
-| $8A || "your " || $9A || "armor"
+| $8a || "your " || $9a || "armor"
 |-
-| $8B || "that " || $9B || "Program"
+| $8b || "that " || $9b || "Program"
 |-
-| $8C || "what " || $9C || "Friend"
+| $8c || "what " || $9c || "Friend"
 |-
-| $8D || "there " || $9D || "Enemy"
+| $8d || "there " || $9d || "Enemy"
 |-
-| $8E || "here " || $9E || "World"
+| $8e || "here " || $9e || "World"
 |-
-| $8F || "it's " || $9F || "Time"
+| $8f || "it's " || $9f || "Time"
 |}
 
-=== Extended Dictionary ($C0-$EF) ===
+=== Extended Dictionary ($c0-$ef) ===
 
 Longer phrases and common dialog patterns.
 
@@ -198,10 +198,10 @@ Longer phrases and common dialog patterns.
 
 <pre>
 Text pointers stored as 16-bit offsets from bank start:
-  - Dialog: Bank $E0-$E7
-  - Items: Bank $D0
-  - Enemies: Bank $D1
-  - Menus: Bank $CF
+  - Dialog: Bank $e0-$e7
+  - Items: Bank $d0
+  - Enemies: Bank $d1
+  - Menus: Bank $cf
 </pre>
 
 === Dialog Format ===
@@ -213,10 +213,10 @@ Text pointers stored as 16-bit offsets from bank start:
   ...
 
 [Dialog Data]
-  Face ID (1 byte, if $FB used)
+  Face ID (1 byte, if $fb used)
   Text data (variable)
   Control codes embedded
-  $FE terminator
+  $fe terminator
 </pre>
 
 == Text Locations ==
@@ -224,19 +224,19 @@ Text pointers stored as 16-bit offsets from bank start:
 {| class="wikitable"
 ! Type !! Bank !! Address Range !! Pointer Table
 |-
-| Main Dialog || $E0-$E3 || $008000-$00FFFF || $E00000
+| Main Dialog || $e0-$e3 || $008000-$00ffff || $e00000
 |-
-| NPC Dialog || $E4-$E5 || $008000-$00FFFF || $E40000
+| NPC Dialog || $e4-$e5 || $008000-$00ffff || $e40000
 |-
-| Battle Text || $E6 || $008000-$00BFFF || $E60000
+| Battle Text || $e6 || $008000-$00bfff || $e60000
 |-
-| Menu Text || $CF || $008000-$00BFFF || $CF0000
+| Menu Text || $cf || $008000-$00bfff || $cf0000
 |-
-| Item Names || $D0 || $008000-$0087FF || $D00000
+| Item Names || $d0 || $008000-$0087ff || $d00000
 |-
-| Enemy Names || $D1 || $008000-$0083FF || $D10000
+| Enemy Names || $d1 || $008000-$0083ff || $d10000
 |-
-| Location Names || $D2 || $008000-$0081FF || $D20000
+| Location Names || $d2 || $008000-$0081ff || $d20000
 |}
 
 == Encoding Notes ==
