--- a/Wiki/SNES/Soul_Blazer/Items.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Items.wikitext
@@ -53,7 +53,7 @@ Multipliers:
 {| class="wikitable"
 ! Sword !! Effect Details
 |-
-| Sword of Life || Every 4 steps taken heals 1 HP. Timer at $7E0050.
+| Sword of Life || Every 4 steps taken heals 1 HP. Timer at $7e0050.
 |-
 | Psycho Sword || Critical rate: 1/8 (12.5%) vs normal 1/16 (6.25%)
 |-
