--- a/Wiki/SNES/The_7th_Saga/Notes.wikitext
+++ b/Wiki/SNES/The_7th_Saga/Notes.wikitext
@@ -6,7 +6,7 @@
 
 * The game multiplies all experience values from the table by 2.2.  This following line, found in the ROM, loads in the multiplier number of 2.203125  (0234 is an 8.8 fixed point number).  So a monster with 0C (12) as its EXP value actually gives you 1A (26) EXP
 
-<pre>$C2/8044 A9 34 02    LDA #$0234</pre>
+<pre>$c2/8044 A9 34 02    LDA #$0234</pre>
 
 You can use either the rom patch or the Game Genie code below to make monsters give 3x the normal EXP:
 
