--- a/Wiki/SNES/The_7th_Saga/index.wikitext
+++ b/Wiki/SNES/The_7th_Saga/index.wikitext
@@ -47,13 +47,13 @@ Notable features:
 |-
 ! Bank Range !! Address !! Description
 |-
-| $00-$17 || $8000-$FFFF || Program ROM
+| $00-$17 || $8000-$ffff || Program ROM
 |-
-| $70 || $0000-$1FFF || SRAM
+| $70 || $0000-$1fff || SRAM
 |-
-| $7E || $0000-$FFFF || WRAM (low)
+| $7e || $0000-$ffff || WRAM (low)
 |-
-| $7F || $0000-$FFFF || WRAM (high)
+| $7f || $0000-$ffff || WRAM (high)
 |}
 
 ==Playable Characters==
